<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/backrepeat"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        tools:context="com.example.android.justjava.MainActivity">

        <!-- INSERT YOUR NAME -->
        <EditText
            android:id="@+id/name_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_name"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/welcome_text"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="22sp" />

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:src="@drawable/books" />

        <!-- QUESTION 1 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/question1"
            android:textSize="20sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q11_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/dickens"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/q12_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wilde"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/q13_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carroll"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/q14_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/milton"
                android:textAppearance="?android:textAppearanceMedium" />

        </RadioGroup>

        <!-- QUESTION 2 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/question2"
            android:textSize="20sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q21_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/milton"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/q22_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goethe"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/q23_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yeats"
                android:textAppearance="?android:textAppearanceMedium" />

        </RadioGroup>

        <!-- QUESTION 3 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/question3"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/neverwhere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingLeft="24dp"
            android:text="@string/neverwhere"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/graveyard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingLeft="24dp"
            android:text="@string/graveyard_book"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/gods"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingLeft="24dp"
            android:text="@string/small_gods"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/things"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingLeft="24dp"
            android:text="@string/needful_things"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/ocean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingLeft="24dp"
            android:text="@string/ocean"
            android:textSize="20sp" />

        <!-- QUESTION 4 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/question4"
            android:textSize="20sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q41_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/charlotte"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/q42_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emily"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/q43_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/elizabeth"
                android:textAppearance="?android:textAppearanceMedium" />

        </RadioGroup>

        <!-- QUESTION 5 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/question5"
            android:textSize="20sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q51_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_four"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/q52_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/baskervilles"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/q53_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/study_in_scarlet"
                android:textAppearance="?android:textAppearanceMedium" />

        </RadioGroup>

        <!-- QUESTION 6 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/question6"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/salems_lot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingLeft="24dp"
            android:text="@string/salems_lot"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/good_omens"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingLeft="24dp"
            android:text="@string/good_omens"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/pet_sematary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingLeft="24dp"
            android:text="@string/pet_sematary"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/the_stand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingLeft="24dp"
            android:text="@string/the_stand"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/night_watch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingLeft="24dp"
            android:text="@string/night_watch"
            android:textSize="20sp" />

        <!-- QUESTION 7 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/question7"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/q7_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_name"
            android:inputType="textCapWords" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:onClick="showScore"
            android:text="@string/submit"
            android:textColor="@color/colorButtonNormal" />

    </LinearLayout>

</ScrollView>
